stylesindex.css aktualisieren

--- a/stylesindex.css
+++ b/stylesindex.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     color: black;
     text-align: center;
-    background-color: black
+    background-color: #004e00
 }
 
 /* Hintergrundbild für Kopfzeile & Zeit-Sektion */
