stylesindex.css aktualisieren

--- a/stylesindex.css
+++ b/stylesindex.css
@@ -81,7 +81,7 @@ nav ul li {
     color: white;
 }
 
-hadith {
+hadith-des-tages {
     background-color: white;
     color: black;
     padding: 10px;
@@ -89,7 +89,7 @@ hadith {
     width: 75%;
 }
 
-dua {
+dua-des-tages {
     background-color: white;
     color: black;
     padding: 10px;
