--- a/stylesindex.css
+++ b/stylesindex.css
@@ -11,6 +11,9 @@ header {
     background-color: #004e00;
     color: white;
     padding: 20px 0;
+    background: url('icons/hintergrund.png') no-repeat center center;
+    background-size: cover;
+    opacity: 0.1;
 }
 
 /* Navigation */
