--- a/stylesindex.css
+++ b/stylesindex.css
@@ -9,7 +9,7 @@ body {
 .header-bg {
     background: url('icons/hintergrund.png') no-repeat center center;
     background-size: cover;
-    height: 100x    
+    height: 80px    
 }
 
 #zeit-section {
