--- a/stylesindex.css
+++ b/stylesindex.css
@@ -1,16 +1,40 @@
-/* Allgemeine Stile */
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #004e00;
-    color: black;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
-.header-bg {
-    background: url('icons/hintergrund.png') no-repeat center center;
-    background-size: cover;
-    height: 80px    
+.header {
+    background-color: #004080;
+    color: white;
+    padding: 10px;
+    text-align: center;
 }
+
+.header-top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 50px;
+    margin-right: 10px;
+}
+
+.header-info {
+    margin-top: 10px;
+}
+
+.prayer-times {
+    background: white;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 
 #zeit-section {
      background-color: #004e00;
@@ -18,12 +42,6 @@ body {
     padding: 15px;
 }
 
-/* Kopfzeile */
-header {
-    background-color: #004e00;
-    color: white;
-    padding: 20px 0;
-}
 
 /* Navigation */
 nav ul {
