--- a/stylesindex.css
+++ b/stylesindex.css
@@ -70,7 +70,7 @@ body {
     background-color: #0050a0;
 }
 
-.prayer-times {
+.next-prayer {
     background: white;
     padding: 20px;
     margin: 10px;
