--- a/stylesindex.css
+++ b/stylesindex.css
@@ -11,7 +11,7 @@ body {
 }
 
 /* 📌 Usul-Ad-Deen Titel oben groß */
-.usul-ad-deen-title {
+.app-title {
     text-align: left;
     font-size: 36px;
     font-weight: bold;
