--- a/stylesindex.css
+++ b/stylesindex.css
@@ -16,6 +16,7 @@ body {
     font-size: 36px;
     font-weight: bold;
     margin-top: 20px;
+    margin-left: 15px;
 }
 
 /* 📌 Menü-Button & Liste */
@@ -73,6 +74,7 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
+    margin-left: 15px;
     
 }
 
