--- a/stylesindex.css
+++ b/stylesindex.css
@@ -16,7 +16,7 @@ body {
     font-size: 36px;
     font-weight: bold;
     margin-top: 20px;
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 /* 📌 Menü-Button & Liste */
@@ -64,17 +64,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
     padding: 15px;
     background: rgba(0, 0, 0, 0.7);
     width: 100%;
 }
 
+.app-icon {
+   height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
 .startseite-text {
-    text-align: left;
+    text-align: center;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
-    margin-left: 15px;
+    
     
 }
 
