--- a/stylesindex.css
+++ b/stylesindex.css
@@ -71,9 +71,9 @@ body {
 }
 
 .app-icon {
-   height: 40px;
-    width: 40px;
-    margin-right: 10px;
+   height: 20px;
+    width: 200px;
+     margin-left: 10px;
     vertical-align: middle;
 }
 
